A new way to deal with volumes and user permissions

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/public;
+    server_tokens off;
 
     location / {
         # try to serve file directly, fallback to app.php
