--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,19 @@ services:
   php:
     build:
       context: .
-#      args:
-#        - PROJECT_DIR_ARG=/usr/share/nginx/public
-    container_name: ypr-permissions-php
-    environment:
-      - PHP_UID=${PHPUID}
-      - PHP_GID=${PHPGID}
-      - DEBUG=false # true, to have more info from the entry point
+      args:
+        - PROJECT_DIR_ARG=/usr/share/nginx/public
+    container_name: ypr-permissions-reborn-php
+    user: ${PHPUID}
     volumes:
-      - ./project:/usr/share/nginx/html
+      - ./project:/usr/share/nginx/public
   nginx:
     image: nginx:1.13.9-alpine
-    container_name: ypr-permissions-nginx
+    container_name: ypr-permissions-reborn-nginx
     depends_on:
       - php
     volumes:
-      - ./project:/usr/share/nginx/html
+      - ./project:/usr/share/nginx/public
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - 8888:80 # http://127.0.0.1:8888/
+      - 8889:80 # http://127.0.0.1:8889/
