--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,15 @@ services:
     container_name: ypr-permissions-reborn-php
     user: ${PHPUID}
     volumes:
-      - ./project:/usr/share/nginx/public
+      - ./project:/usr/share/nginx/public:cached
+      - ./php/docker.conf:/usr/local/etc/php-fpm.d/docker.conf:ro
   nginx:
     image: nginx:1.13.9-alpine
     container_name: ypr-permissions-reborn-nginx
     depends_on:
       - php
     volumes:
-      - ./project:/usr/share/nginx/public
+      - ./project:/usr/share/nginx/public:cached
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - 8889:80 # http://127.0.0.1:8889/
